src/tests/krate/publish/snapshots/integration__krate__publish__trustpub_github__full_flow-11.snap
---
source: src/tests/krate/publish/trustpub_github.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo@1.0.0
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new version of the foo crate was published by your account (https://crates.io/users/foo) at [0000-00-00T00:00:00Z].

View v1.0.0 here: https://crates.io/crates/foo/1.0.0

If you have questions or security concerns, you can contact us at help@crates.io. If you would like to stop receiving these security notifications, you can disable them in your account settings.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>A new version of the <strong>foo</strong> crate was published by your account (https:&#x2f;&#x2f;crates.io&#x2f;users&#x2f;foo) at [0000-00-00T00:00:00Z].</p>

<p>View v1.0.0 here: <a href="https://crates.io/crates/foo/1.0.0">https://crates.io/crates/foo/1.0.0</a></p>

<p>If you have questions or security concerns, you can contact us at <a href="mailto:help@crates.io">help@crates.io</a>. If you would like to stop receiving these security notifications, you can disable them in your account settings.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/crates/foo/1.0.0",
    "url": "https://crates.io/crates/foo/1.0.0",
    "name": "View Release"
  },
  "description": "View the newly published crate version",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--

----------------------------------------

To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Trusted Publishing configuration added to foo
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

You added a new "Trusted Publishing" configuration for GitHub Actions to your crate "foo". Trusted publishers act as trusted users and can publish new versions of the crate automatically.

This configuration allows the workflow file at https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml to publish new versions of this crate.

If you did not make this change and you think it was made maliciously, you can remove the configuration from the crate via the "Settings" tab on the crate's page.

If you are unable to revert the change and need to do so, you can email help@crates.io for assistance.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>You added a new "Trusted Publishing" configuration for GitHub Actions to your crate "<strong>foo</strong>". Trusted publishers act as trusted users and can publish new versions of the crate automatically.</p>

<p>This configuration allows the workflow file at <a href="https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml">https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml</a> to publish new versions of this crate.</p>

<p>If you did not make this change and you think it was made maliciously, you can remove the configuration from the crate via the "Settings" tab on the crate's page.</p>

<p>If you are unable to revert the change and need to do so, you can email <a href="mailto:help@crates.io">help@crates.io</a> for assistance.</p>

<p>--<br>The crates.io Team</p>
--[boundary]--

----------------------------------------

To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo@1.1.0
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new version of the foo crate was published by GitHub Actions (https://github.com/rust-lang/foo-rs/actions/runs/example-run-id) at [0000-00-00T00:00:00Z].

View v1.1.0 here: https://crates.io/crates/foo/1.1.0

If you have questions or security concerns, you can contact us at help@crates.io. If you would like to stop receiving these security notifications, you can disable them in your account settings.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>A new version of the <strong>foo</strong> crate was published by GitHub Actions (https:&#x2f;&#x2f;github.com&#x2f;rust-lang&#x2f;foo-rs&#x2f;actions&#x2f;runs&#x2f;example-run-id) at [0000-00-00T00:00:00Z].</p>

<p>View v1.1.0 here: <a href="https://crates.io/crates/foo/1.1.0">https://crates.io/crates/foo/1.1.0</a></p>

<p>If you have questions or security concerns, you can contact us at <a href="mailto:help@crates.io">help@crates.io</a>. If you would like to stop receiving these security notifications, you can disable them in your account settings.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/crates/foo/1.1.0",
    "url": "https://crates.io/crates/foo/1.1.0",
    "name": "View Release"
  },
  "description": "View the newly published crate version",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--
